# ner-x5

./: .gitignore
.github/workflows/: build.yml  deploy.yml  main.yml
AspNetCore/: Dockerfile  EntitiesExtractionX5.sln  docker-compose.Local.yml  docker-compose.yml
AspNetCore/Api/: Api.csproj  Program.cs
AspNetCore/Api/python/: requirements.txt
AspNetCore/EntitiesExtractionX5.AppHost/: Program.cs
ML_PART/integration/: model.py
fastapi/: DOCKERFILE  Dockerfile  docker-compose.Local.yml  docker-compose.yml  pyproject.toml
fastapi/app/: main.py
